name:                freer-persistent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benweitzman/freer-persistent#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Weitzman
maintainer:          benweitzman@gmail.com
copyright:           2017 Ben Weitzman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Freer.Sql
                     , Control.Monad.Freer.Sql.Internal
                     , Control.Monad.Freer.Sql.Test
                     , Control.Monad.Freer.Sql.Types
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , containers
                     , freer-effects
                     , mtl
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances


test-suite freer-persistent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , freer-persistent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benweitzman/freer-persistent
